samples/_failures_safe/1761362389_c0a8a7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2089687d.c: In function ‘print_point_cloud’:
./samples/SAFE/__tmp_2089687d.c:146:5: error: expected declaration or statement at end of input
  146 |     for (size_t i = 0; i < cloud->count; i++) {
      |     ^~~
./samples/SAFE/__tmp_2089687d.c:146:5: error: expected declaration or statement at end of input
